...
    case news
    case map

    var title: String {
        switch self {
        case .home: return "主页"
        case .news: return "新闻"
        case .map: return "地图"
        }
    }

    var systemImage: String {
        switch self {
...
